array.island.Island.scala.error
Compilation error:
Island:7: error: missing argument list for method island in class Island
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `island _` or `island(_)` instead of `island`.
        return island.slice(0,i-1)+island.slice(i+1,num.length)
               ^Island:7: error: missing argument list for method island in class Island
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `island _` or `island(_)` instead of `island`.
        return island.slice(0,i-1)+island.slice(i+1,num.length)
                                   ^Island:10: error: not enough arguments for method max: (implicit cmp: Ordering[B])Int.
Unspecified value parameter cmp.
    return num.max()
                  ^Island:4: error: type mismatch;
 found   : Unit
 required: Int
  if (i>2) {
  ^